Bug 372062 - Enabled touchpad plasmoid in Wayland messes up SysTray, especially VirtuaKeyboard plasmoid
Summary: Enabled touchpad plasmoid in Wayland messes up SysTray, especially VirtuaKeyb...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.8.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-04 09:26 UTC by flyos
Modified: 2017-01-19 15:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description flyos 2016-11-04 09:26:56 UTC
Having the touchpad plasmoid activated in the system tray results in the absence of the virtual keyboard plasmoid when on a Wayland session, or an absence of even all plasmoids (or are they called applet?) in the system tray.

Step to reproduce:
- Add the touchpad plasmoid to the system tray
- Check that the line "ExtraItems" of the config file "plasma-org.kde.plasma.desktop-appletsrc" contains the keyword "touchpad"
- Start a Wayland session

Expected results:
- The systray in Wayland should contain all plasmoids, including the Virtual Keyboard one

Actual results:
- Either the systray contains the plasmoids, but not the Keyboard one, or it doesn't contain any plasmoid at all.

Removing "touchpad" from the config file restores the normal behaviour.

More information can be found on this forum thread (especially the end):
https://forums.opensuse.org/showthread.php/520307-Qt-Virtual-Keyboard
Comment 1 Marco Martin 2016-11-04 13:55:42 UTC
don't seem able to reproduce it (master) can anyone else reproduce this?
Comment 2 Marco Martin 2017-01-17 17:07:17 UTC
Git commit 47ec9b84db5c31ac4a781bbdf398ca6744b3b1bc by Marco Martin.
Committed on 17/01/2017 at 17:07.
Pushed by mart into branch 'master'.

correctly forward status from applets to containment

Summary:
unfortunately hiddenvisibility is the "biggest" status
that makes computing the proper status tricky.
if an applet in the containment is hidden, we must not mark as
hidden the whole containment, because it's as if hidden was
(as it should be) the smallest in the enum

Test Plan: touchpad plasmoid no longer hides the systray

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel, #frameworks

Tags: #plasma, #frameworks

Differential Revision: https://phabricator.kde.org/D4174

M  +1    -0    src/plasma/plasma.h
M  +3    -1    src/plasma/private/containment_p.cpp

https://commits.kde.org/plasma-framework/47ec9b84db5c31ac4a781bbdf398ca6744b3b1bc
Comment 3 Johannes Hirte 2017-01-19 10:29:13 UTC
This fix breaks panel autohide. Activiating the application launcher brings up the panel and it never hides again. It's necessary to click on it, mouseover alone doesn't trigger the bug.
Comment 4 Christoph Feck 2017-01-19 15:16:17 UTC
Johannes, should be fixed with this follow-up commit:
https://commits.kde.org/plasma-framework/46c87d5ac39370b17a34dd5a07dedd0ea631f217