src/plasma/private/containment_p.cpp
@@ -123,7 +123,9 @@ void ContainmentPrivate::checkStatus(Plasma::Types::ItemStatus appletStatus)
         }
     }
 
-    q->setStatus(appletStatus);
+    if (appletStatus > q->status() && appletStatus != Plasma::Types::HiddenStatus) {
+        q->setStatus(appletStatus);
+    }
 }
 
 void ContainmentPrivate::triggerShowAddWidgets()
